--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -107,7 +107,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputUserName" />
 
     <Button
-        android:id="@+id/btnLog"
+        android:id="@+id/btnsignup"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -132,6 +132,6 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="@+id/btnLog"
         app:layout_constraintStart_toStartOf="@+id/btnLog"
-        app:layout_constraintTop_toBottomOf="@+id/btnLog" />
+        app:layout_constraintTop_toBottomOf="@+id/btnsignup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
