--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -8,6 +8,7 @@
     android:background="@color/colorPrimary">
 
     <ImageView
+        android:id="@+id/menu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="ClickMenu"
@@ -27,7 +28,10 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_more_white"/>
+        android:onClick="ClickShopping"
+        android:src="@drawable/ic_shopping"/>
+
+
 
 
 </LinearLayout>
